# lowlat-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_itch_file.cpp  bench_operator.cpp  bench_pipeline.cpp  bench_rms.cpp  bench_sma.cpp  bench_smoke.cpp  bench_threading.cpp  bench_vwap.cpp
docs/: ADR-001.md  ADR-002.md  ADR-003.md  DESIGN.md
engine/: CMakeLists.txt
engine/include/engine/: events.h  operator.h  pipeline.h
engine/include/engine/operators/: rms.h  sma.h  vwap.h
engine/include/engine/sources/: itch.h  wav.h
tests/: CMakeLists.txt  test_itch_source.cpp  test_operator.cpp  test_pipeline.cpp  test_rms.cpp  test_sma.cpp  test_smoke.cpp  test_vwap.cpp  test_wav_source.cpp
